// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`vault-acl-changes e2e tests should RoleAdminChanged (3+2) 1`] = `
[
  Finding {
    "addresses": [],
    "alertId": "MELLOW-VAULT-ROLE-ADMIN-CHANGED",
    "description": "Role Admin for role 0xf23ec0bb4210edd5cba85afd05127efcd2fc6a781bfed49188da1081670b22d8(ADMIN ROLE) was changed from 0x0000000000000000000000000000000000000000000000000000000000000000 to 0xf23ec0bb4210edd5cba85afd05127efcd2fc6a781bfed49188da1081670b22d8",
    "labels": [],
    "metadata": {
      "args": "0xf23ec0bb4210edd5cba85afd05127efcd2fc6a781bfed49188da1081670b22d8,0x0000000000000000000000000000000000000000000000000000000000000000,0xf23ec0bb4210edd5cba85afd05127efcd2fc6a781bfed49188da1081670b22d8",
    },
    "name": "🚨 Vault: Role Admin changed",
    "protocol": "ethereum",
    "severity": 4,
    "source": {},
    "timestamp": 2023-12-31T00:00:00.000Z,
    "type": 4,
    "uniqueKey": "",
  },
  Finding {
    "addresses": [],
    "alertId": "MELLOW-VAULT-ROLE-ADMIN-CHANGED",
    "description": "Role Admin for role 0xc171260023d22a25a00a2789664c9334017843b831138c8ef03cc8897e5873d7(ADMIN DELEGATE ROLE) was changed from 0x0000000000000000000000000000000000000000000000000000000000000000 to 0xf23ec0bb4210edd5cba85afd05127efcd2fc6a781bfed49188da1081670b22d8",
    "labels": [],
    "metadata": {
      "args": "0xc171260023d22a25a00a2789664c9334017843b831138c8ef03cc8897e5873d7,0x0000000000000000000000000000000000000000000000000000000000000000,0xf23ec0bb4210edd5cba85afd05127efcd2fc6a781bfed49188da1081670b22d8",
    },
    "name": "🚨 Vault: Role Admin changed",
    "protocol": "ethereum",
    "severity": 4,
    "source": {},
    "timestamp": 2023-12-31T00:00:00.000Z,
    "type": 4,
    "uniqueKey": "",
  },
  Finding {
    "addresses": [],
    "alertId": "MELLOW-VAULT-ROLE-ADMIN-CHANGED",
    "description": "Role Admin for role 0x46a52cf33029de9f84853745a87af28464c80bf0346df1b32e205fc73319f622(OPERATOR) was changed from 0x0000000000000000000000000000000000000000000000000000000000000000 to 0xc171260023d22a25a00a2789664c9334017843b831138c8ef03cc8897e5873d7",
    "labels": [],
    "metadata": {
      "args": "0x46a52cf33029de9f84853745a87af28464c80bf0346df1b32e205fc73319f622,0x0000000000000000000000000000000000000000000000000000000000000000,0xc171260023d22a25a00a2789664c9334017843b831138c8ef03cc8897e5873d7",
    },
    "name": "🚨 Vault: Role Admin changed",
    "protocol": "ethereum",
    "severity": 4,
    "source": {},
    "timestamp": 2023-12-31T00:00:00.000Z,
    "type": 4,
    "uniqueKey": "",
  },
  Finding {
    "addresses": [],
    "alertId": "MELLOW-VAULT-ROLE-GRANTED",
    "description": "Role 0x46a52cf33029de9f84853745a87af28464c80bf0346df1b32e205fc73319f622(OPERATOR) was granted to 0x188858AC61a74350116d1CB6958fBc509FD6afA1 by 0x188858AC61a74350116d1CB6958fBc509FD6afA1",
    "labels": [],
    "metadata": {
      "args": "0x46a52cf33029de9f84853745a87af28464c80bf0346df1b32e205fc73319f622,0x188858AC61a74350116d1CB6958fBc509FD6afA1,0x188858AC61a74350116d1CB6958fBc509FD6afA1",
    },
    "name": "🚨 Vault: Role granted",
    "protocol": "ethereum",
    "severity": 4,
    "source": {},
    "timestamp": 2023-12-31T00:00:00.000Z,
    "type": 4,
    "uniqueKey": "",
  },
  Finding {
    "addresses": [],
    "alertId": "MELLOW-VAULT-ROLE-GRANTED",
    "description": "Role 0xf23ec0bb4210edd5cba85afd05127efcd2fc6a781bfed49188da1081670b22d8(ADMIN ROLE) was granted to 0x188858AC61a74350116d1CB6958fBc509FD6afA1 by 0x188858AC61a74350116d1CB6958fBc509FD6afA1",
    "labels": [],
    "metadata": {
      "args": "0xf23ec0bb4210edd5cba85afd05127efcd2fc6a781bfed49188da1081670b22d8,0x188858AC61a74350116d1CB6958fBc509FD6afA1,0x188858AC61a74350116d1CB6958fBc509FD6afA1",
    },
    "name": "🚨 Vault: Role granted",
    "protocol": "ethereum",
    "severity": 4,
    "source": {},
    "timestamp": 2023-12-31T00:00:00.000Z,
    "type": 4,
    "uniqueKey": "",
  },
]
`;

exports[`vault-acl-changes e2e tests should RoleGranted 1`] = `
[
  Finding {
    "addresses": [],
    "alertId": "MELLOW-VAULT-ROLE-GRANTED",
    "description": "Role 0x46a52cf33029de9f84853745a87af28464c80bf0346df1b32e205fc73319f622(OPERATOR) was granted to 0x2afc096981c2CFe3501bE4054160048718F6C0C8 by 0x188858AC61a74350116d1CB6958fBc509FD6afA1",
    "labels": [],
    "metadata": {
      "args": "0x46a52cf33029de9f84853745a87af28464c80bf0346df1b32e205fc73319f622,0x2afc096981c2CFe3501bE4054160048718F6C0C8,0x188858AC61a74350116d1CB6958fBc509FD6afA1",
    },
    "name": "🚨 Vault: Role granted",
    "protocol": "ethereum",
    "severity": 4,
    "source": {},
    "timestamp": 2023-12-31T00:00:00.000Z,
    "type": 4,
    "uniqueKey": "",
  },
]
`;

exports[`vault-acl-changes e2e tests should RoleRevokedRoleRevoked 1`] = `
[
  Finding {
    "addresses": [],
    "alertId": "MELLOW-VAULT-ROLE-REVOKED",
    "description": "Role 0xc171260023d22a25a00a2789664c9334017843b831138c8ef03cc8897e5873d7(ADMIN DELEGATE ROLE) was revoked to 0x188858AC61a74350116d1CB6958fBc509FD6afA1 by 0x188858AC61a74350116d1CB6958fBc509FD6afA1",
    "labels": [],
    "metadata": {
      "args": "0xc171260023d22a25a00a2789664c9334017843b831138c8ef03cc8897e5873d7,0x188858AC61a74350116d1CB6958fBc509FD6afA1,0x188858AC61a74350116d1CB6958fBc509FD6afA1",
    },
    "name": "🚨  Vault: Role revoked",
    "protocol": "ethereum",
    "severity": 4,
    "source": {},
    "timestamp": 2023-12-31T00:00:00.000Z,
    "type": 4,
    "uniqueKey": "",
  },
]
`;

exports[`vault-acl-changes e2e tests should be not slot changes 1`] = `[]`;

exports[`vault-acl-changes e2e tests should everything is fine 1`] = `[]`;

exports[`vault-acl-changes e2e tests should process tx with Added Owner and Execution Success 1`] = `[]`;

exports[`vault-acl-changes e2e tests should process tx with Changed Threshold and Execution Success 1`] = `[]`;
